// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataGrid: Component should render correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <Grid
      customStyles={
        Object {
          "backgroundColor": "#1D1D20",
          "border": "1px solid #fff",
          "color": "#71737e",
          "padding": "10px 15px",
        }
      }
      key="0"
      size={25}
    >
      #
    </Grid>
    <Grid
      customStyles={
        Object {
          "backgroundColor": "#1D1D20",
          "border": "1px solid #fff",
          "color": "#71737e",
          "padding": "10px 15px",
        }
      }
      key="1"
      size={25}
    >
      Name
    </Grid>
    <Grid
      customStyles={
        Object {
          "backgroundColor": "#1D1D20",
          "border": "1px solid #fff",
          "color": "#71737e",
          "padding": "10px 15px",
        }
      }
      key="2"
      size={25}
    >
      Surname
    </Grid>
    <Grid
      customStyles={
        Object {
          "backgroundColor": "#1D1D20",
          "border": "1px solid #fff",
          "color": "#71737e",
          "padding": "10px 15px",
        }
      }
      key="3"
      size={25}
    >
      Date of Birth
    </Grid>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "width": "100%",
      }
    }
  >
    <Grid
      key="0"
      size={100}
    >
      <Grid
        customStyles={Object {}}
        key="0"
        size={25}
      >
        342
      </Grid>
      <Grid
        customStyles={Object {}}
        key="1"
        size={25}
      >
        Alan
      </Grid>
      <Grid
        customStyles={Object {}}
        key="2"
        size={25}
      >
        Watts
      </Grid>
      <Grid
        customStyles={Object {}}
        key="3"
        size={25}
      >
        06/01/1915
      </Grid>
    </Grid>
    <Grid
      key="1"
      size={100}
    >
      <Grid
        customStyles={Object {}}
        key="0"
        size={25}
      >
        355
      </Grid>
      <Grid
        customStyles={Object {}}
        key="1"
        size={25}
      >
        David
      </Grid>
      <Grid
        customStyles={Object {}}
        key="2"
        size={25}
      >
        Bowie
      </Grid>
      <Grid
        customStyles={Object {}}
        key="3"
        size={25}
      >
        08/01/1947
      </Grid>
    </Grid>
    <Grid
      key="2"
      size={100}
    >
      <Grid
        customStyles={Object {}}
        key="0"
        size={25}
      >
        123
      </Grid>
      <Grid
        customStyles={Object {}}
        key="1"
        size={25}
      >
        Dale
      </Grid>
      <Grid
        customStyles={Object {}}
        key="2"
        size={25}
      >
        Chihuly
      </Grid>
      <Grid
        customStyles={Object {}}
        key="3"
        size={25}
      >
        20/09/1941
      </Grid>
    </Grid>
    <Grid
      key="3"
      size={100}
    >
      <Grid
        customStyles={Object {}}
        key="0"
        size={25}
      >
        556
      </Grid>
      <Grid
        customStyles={Object {}}
        key="1"
        size={25}
      >
        Sebastião
      </Grid>
      <Grid
        customStyles={Object {}}
        key="2"
        size={25}
      >
        Salgado
      </Grid>
      <Grid
        customStyles={Object {}}
        key="3"
        size={25}
      >
        08/02/1944
      </Grid>
    </Grid>
  </div>
</div>
`;

exports[`DataGrid: Component should render with custom styles and size 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <Grid
      customStyles={
        Object {
          "backgroundColor": "#778DA9",
          "border": "0.3px solid #fff",
          "color": "#fff",
          "padding": "10px 5px",
        }
      }
      key="0"
      size={10}
    >
      # - Sized
    </Grid>
    <Grid
      customStyles={
        Object {
          "backgroundColor": "#778DA9",
          "border": "0.3px solid #fff",
          "color": "#fff",
          "padding": "10px 5px",
        }
      }
      key="1"
      size={30}
    >
      Name
    </Grid>
    <Grid
      customStyles={
        Object {
          "backgroundColor": "#778DA9",
          "border": "0.3px solid #fff",
          "color": "#fff",
          "padding": "10px 5px",
        }
      }
      key="2"
      size={30}
    >
      Surname
    </Grid>
    <Grid
      customStyles={
        Object {
          "backgroundColor": "#778DA9",
          "border": "0.3px solid #fff",
          "color": "#fff",
          "padding": "10px 5px",
        }
      }
      key="3"
      size={30}
    >
      Date of Birth
    </Grid>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "width": "100%",
      }
    }
  >
    <Grid
      key="0"
      size={100}
    >
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#778DA9",
            "border": "0.3px solid #fff",
            "color": "#fff",
            "padding": "10px 5px",
          }
        }
        key="0"
        size={10}
      >
        342
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="1"
        size={30}
      >
        Alan
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="2"
        size={30}
      >
        Watts
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="3"
        size={30}
      >
        06/01/1915
      </Grid>
    </Grid>
    <Grid
      key="1"
      size={100}
    >
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#778DA9",
            "border": "0.3px solid #fff",
            "color": "#fff",
            "padding": "10px 5px",
          }
        }
        key="0"
        size={10}
      >
        355
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="1"
        size={30}
      >
        David
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="2"
        size={30}
      >
        Bowie
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="3"
        size={30}
      >
        08/01/1947
      </Grid>
    </Grid>
    <Grid
      key="2"
      size={100}
    >
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#778DA9",
            "border": "0.3px solid #fff",
            "color": "#fff",
            "padding": "10px 5px",
          }
        }
        key="0"
        size={10}
      >
        123
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="1"
        size={30}
      >
        Dale
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="2"
        size={30}
      >
        Chihuly
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="3"
        size={30}
      >
        20/09/1941
      </Grid>
    </Grid>
    <Grid
      key="3"
      size={100}
    >
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#778DA9",
            "border": "0.3px solid #fff",
            "color": "#fff",
            "padding": "10px 5px",
          }
        }
        key="0"
        size={10}
      >
        556
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="1"
        size={30}
      >
        Sebastião
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="2"
        size={30}
      >
        Salgado
      </Grid>
      <Grid
        customStyles={
          Object {
            "backgroundColor": "#3C474B",
            "border": "0.3px solid #fff",
            "color": "#E0E1DD",
            "padding": "10px 5px",
          }
        }
        key="3"
        size={30}
      >
        08/02/1944
      </Grid>
    </Grid>
  </div>
</div>
`;
